# BIST

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BORSAPY_INTEGRATION_EVALUATION.md  README.md  mkdocs.yml  pyproject.toml  run_backtest.py
Models/: README.md  __init__.py  analyze_2026_daily.py  build_factor_construction_cache.py  debug_backtester.py  portfolio_engine.py  smoke_test_signal_factory.py  validate_signal_outputs.py
Models/common/: __init__.py  backtest_services.py  backtester.py  benchmarking.py  benchmarking_cli.py  borsapy_adapter.py  config_manager.py  data_loader.py  data_manager.py  macro_adapter.py  portfolio_analytics.py  report_generator.py  risk_manager.py  staleness.py  utils.py
Models/configs/: donchian.py  five_factor_rotation.py  investment.py  momentum.py  profitability.py  size.py  sma.py  value.py  xu100.py
Models/data_pipeline/: __init__.py  fetcher.py  freshness.py  merge.py  pipeline.py  provenance.py  schemas.py
Models/signals/: __init__.py  accrual_signals.py  adx_signals.py  asset_growth_signals.py  atr_signals.py  axis_cache.py  borsapy_indicators.py  breakout_value_signals.py  composite.py  dividend_rotation_signals.py  earnings_quality_signals.py  ema_signals.py  factor_axes.py  factor_builders.py  factory.py  five_factor_pipeline.py  five_factor_rotation_signals.py  fscore_reversal_signals.py  ichimoku_signals.py  investment_signals.py  macd_signals.py  macro_hedge_signals.py  momentum.py  momentum_asset_growth_signals.py  momentum_signals.py  obv_signals.py  orthogonalization.py  parabolic_sar_signals.py  profitability_signals.py  quality.py  quality_momentum_signals.py  quality_value_signals.py  roa_signals.py  size_rotation_momentum_signals.py  size_rotation_quality_signals.py  size_rotation_signals.py  size_signals.py  small_cap_signals.py  supertrend_signals.py  technical.py  (+3 more)
Regime Filter/: config.py  dashboard.py  debug_ensemble.py  debug_regime_filter.py  evaluate_ensemble.py  evaluation.py  examples.py  market_data.py  regime_filter.py  regime_models.py  requirements.txt  run_api.py  run_evaluation.py  run_full_pipeline.py  simple_regime.py  strategies.py  tune_variants.py
Regime Filter/alerts/: __init__.py  alert_config.py  email_alerts.py
Regime Filter/api/: __init__.py  main.py  models.py  scheduler.py  websocket.py
Regime Filter/data/: xu100_prices.csv
Regime Filter/docs/: README.md  SCRIPT_GUIDE.md
Regime Filter/models/: __init__.py  ensemble_regime.py  lstm_regime.py
benchmarks/: README.md
bist-quant-ai/: APPLICATION.md  README.md  vercel.json
bist-quant-ai/dashboard/: manual_portfolio_daily.csv  manual_portfolio_holdings.csv  manual_trades.csv
bist-quant-ai/dashboard/app/: README.md
bist-quant-ai/src/app/: globals.css
bist-quant-ai/src/app/agents/: page.tsx
bist-quant-ai/src/app/dashboard/: page.tsx
bist-quant-ai/src/components/: AgentChat.tsx  Navbar.tsx
bist-quant-ai/src/lib/server/: dashboardData.ts  signalConstructionPython.ts
configs/: borsapy_config.yaml  strategies.yaml
data/: fundamental_metrics.parquet  gold_funds_daily_prices.parquet  isyatirim_prices_consolidated.parquet  tcmb_indicators.csv  usdtry_data.csv  xau_try_2013_2026.csv  xu100_prices.csv  xu100_prices.parquet
data/Fetcher-Scrapper/: BORSAPY_STATUS.md  bist_fundamental_scrapper.py  borsapy_client.py  fintables_fetch.py  fongetiri_gold_funds_fetcher.py  is_yatirim_fetcher.py  isyatirim_marketcaps.py  realtime_api.py  scrapper_fintables.py  tcmb_data_fetcher.py  tcmb_rates.py  update_prices.py  xu100_fetcher.py  yfinance_xautry.py
docs/: API_REFERENCE.md  CONFIG_REFERENCE.md  DEVELOPER_GUIDE.md  TROUBLESHOOTING.md  TUTORIALS.md  changelog.md  index.md
docs/api/: index.md  portfolio_engine.md
docs/api/common/: backtester.md  config_manager.md  data_loader.md  risk_manager.md
docs/api/signals/: composite.md  factory.md  momentum.md  protocol.md  quality.md  technical.md  value.md
docs/examples/: 01-quick-start.md  02-custom-strategy.md  03-factor-analysis.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: backtests.md  portfolio-engine.md  signals.md
examples/: 01_quick_start.py  02_custom_strategy.py  03_factor_analysis.py
regime_filter/: macro_features.py  regime_macro_experiments.py  run_macro_experiments.py  simple_regime.py
scripts/: classify_sectors.py  fetch_integrate_fundamentals.py  refresh_fundamentals_q4_2025.py  validate_signals_refactor.py
src/bist_hedge_fund/: crew.py  main.py  tools.py
src/bist_hedge_fund/config/: agents.yaml  tasks.yaml
tests/: conftest.py  test_data_pipeline_core.py  test_imports.py
tests/fixtures/: api_value_response.json  golden_results.json  raw_fundamentals_payload.json
tests/integration/: test_backtest_workflow.py  test_backward_compatibility.py  test_benchmarking.py  test_data_pipeline.py  test_golden_results.py  test_phase6_system_integration.py
tests/property/: test_math_properties.py
tests/unit/: test_backtest_services.py  test_backtester.py  test_backtester_edge_cases.py  test_borsapy_fallback.py  test_config_manager.py  test_data_loader.py  test_five_factor_rotation.py  test_report_generator.py  test_risk_management.py  test_signal_factory.py  test_signal_smoke.py
