[project]
name = "bist-hedge-fund"
version = "0.1.0"
description = "BIST AI Hedge Fund - Multi-factor portfolio with ML regime detection powered by CrewAI"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "hmmlearn>=0.3.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.crewai]
type = "crew"
